[gd_scene load_steps=8 format=3 uid="uid://8yf0uk2x5ns2"]

[ext_resource type="Script" path="res://Scripts/Menus_Scripts/inventory_menu.gd" id="1_c13by"]
[ext_resource type="Texture2D" uid="uid://bbotkdixvyeub" path="res://Assets/Card_art/Card_base.png" id="2_86ymm"]
[ext_resource type="Texture2D" uid="uid://bbbdxq7l5h4ay" path="res://Assets/Items_Art/GreenSlime_Item.png" id="3_wp1wy"]
[ext_resource type="Texture2D" uid="uid://cc73e14sui08a" path="res://Assets/Items_Art/AcidicSlime_Item.png" id="4_yi5qn"]
[ext_resource type="Texture2D" uid="uid://5bhcjous3n8p" path="res://Assets/Items_Art/PoisonousSlime_Item.png" id="5_3sm8o"]
[ext_resource type="Texture2D" uid="uid://bjry5pehhfnl4" path="res://Assets/Items_Art/LavaSlime_Item.png" id="6_58hyq"]
[ext_resource type="Texture2D" uid="uid://404kglpu24qu" path="res://Assets/Items_Art/AquaSlime_Item.png" id="7_3jaml"]

[node name="Inventory_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c13by")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -25.0
offset_top = -17.0
offset_right = 1164.0
offset_bottom = 667.0
color = Color(0.492416, 0.658999, 0.893626, 1)

[node name="Go_Back_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1067.0
offset_top = 7.0
offset_right = 1139.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 40
text = "X"

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = -7.0
offset_right = 1059.0
offset_bottom = 101.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 75
bbcode_enabled = true
text = "[center]Inventory[/center]"

[node name="Item1" type="Sprite2D" parent="."]
position = Vector2(74, 246.25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_86ymm")

[node name="TextureButton" type="TextureButton" parent="Item1"]
offset_left = -113.0
offset_top = -148.0
offset_right = 112.0
offset_bottom = 148.0
texture_normal = ExtResource("3_wp1wy")
metadata/_edit_use_anchors_ = true

[node name="Item_TXT_1" type="RichTextLabel" parent="Item1"]
offset_left = -110.0
offset_top = 37.0
offset_right = 107.0
offset_bottom = 140.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Green - Slime
5
"
metadata/_edit_use_anchors_ = true

[node name="Item2" type="Sprite2D" parent="."]
position = Vector2(215, 246.25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_86ymm")

[node name="TextureButton" type="TextureButton" parent="Item2"]
offset_left = -113.0
offset_top = -148.0
offset_right = 112.0
offset_bottom = 148.0
texture_normal = ExtResource("4_yi5qn")
metadata/_edit_use_anchors_ = true

[node name="Item_TXT_1" type="RichTextLabel" parent="Item2"]
offset_left = -110.0
offset_top = 37.0
offset_right = 107.0
offset_bottom = 140.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Green - Slime
5
"
metadata/_edit_use_anchors_ = true

[node name="Item3" type="Sprite2D" parent="."]
position = Vector2(353, 246.25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_86ymm")

[node name="TextureButton" type="TextureButton" parent="Item3"]
offset_left = -113.0
offset_top = -148.0
offset_right = 112.0
offset_bottom = 148.0
texture_normal = ExtResource("5_3sm8o")
metadata/_edit_use_anchors_ = true

[node name="Item_TXT_1" type="RichTextLabel" parent="Item3"]
offset_left = -110.0
offset_top = -14.0
offset_right = 107.0
offset_bottom = 140.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Green - Slime
5
"
metadata/_edit_use_anchors_ = true

[node name="Item4" type="Sprite2D" parent="."]
position = Vector2(492, 246.25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_86ymm")

[node name="TextureButton" type="TextureButton" parent="Item4"]
offset_left = -113.0
offset_top = -148.0
offset_right = 112.0
offset_bottom = 148.0
texture_normal = ExtResource("6_58hyq")
metadata/_edit_use_anchors_ = true

[node name="Item_TXT_1" type="RichTextLabel" parent="Item4"]
anchors_preset = -1
anchor_top = 0.135385
anchor_bottom = 0.00615385
offset_left = -110.0
offset_top = -14.0
offset_right = 107.0
offset_bottom = 140.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Green - Slime
5
"
metadata/_edit_use_anchors_ = true

[node name="Item5" type="Sprite2D" parent="."]
position = Vector2(633, 246.25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_86ymm")

[node name="TextureButton" type="TextureButton" parent="Item5"]
offset_left = -113.0
offset_top = -148.0
offset_right = 112.0
offset_bottom = 148.0
texture_normal = ExtResource("7_3jaml")
metadata/_edit_use_anchors_ = true

[node name="Item_TXT_1" type="RichTextLabel" parent="Item5"]
anchors_preset = -1
anchor_top = 0.16
anchor_bottom = 0.00615385
offset_left = -110.0
offset_top = -14.0
offset_right = 107.0
offset_bottom = 140.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Green - Slime
5
"
metadata/_edit_use_anchors_ = true

[connection signal="button_up" from="Go_Back_Button" to="." method="_on_go_back_button_button_up"]
